# ifmetric

./: .gitignore  Makefile.am  Makefile.in  bootstrap.sh  config.h.in  configure  configure.ac  ifmetric_0.3.orig.tar.gz.delta  ifmetric_0.3.orig.tar.gz.id
debian/: changelog  control  copyright  ifmetric.dirs  ifmetric.ifup  rules  upstream_changelog  watch
debian/patches/: debian-changes  ifmetric.8_typo  ifmetric.c_netlink-invalid-arg  ifmetric.c_typo  nlrequest.c_packet-too-small_fix  series
debian/source/: patch-header
doc/: Makefile.am  Makefile.in  README  README.html  README.html.in  style.css
man/: Makefile.am  Makefile.in  ifmetric.8  ifmetric.8.xml.in  xmltoman.css  xmltoman.dtd  xmltoman.xsl
src/: Makefile.am  Makefile.in  getifn.c  getifn.h  ifmetric.c  nlrequest.c  nlrequest.h
